# tmplr

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  main.tmpl
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: example.template
cue/: LICENSE.cue  changelog.cue  documentation.cue  help.cue  readme.cue
src/: empty_dir_scanner.rs  error_handling.rs  file_scanner.rs  gen_template.rs  list_templates.rs  main.rs  render_template.rs  template.rs
templates/clojure/: clojure_quickstart.tmplr
templates/cue/: cue_generator.tmplr  cue_pikchr.tmplr  literate.tmplr
templates/gh/: github-build-rust.tmplr
templates/haskell/: Shakefile.tmplr  script.tmplr
templates/misc/: LICENSE.tmplr
templates/rust/: cargo-test.tmplr  exercise.tmplr  kak-tool.tmplr
tests/: cli_test.rs  cli_tests.rs
tests/cli_tests/: basic_tests.rs  create_template_tests.rs  echo_tests.rs  list_tests.rs  magic_variable_tests.rs  preview_tests.rs  template_dir_tests.rs  unroll_extension_tests.rs  unroll_tests.rs
