[package]
name = "templar"
version = "0.1.0"
edition = "2024"

# Optimize dependencies even in debug mode
[profile.dev.package."*"]
opt-level = 3

# Disable debug info for dependencies (massive size/time win)
[profile.dev]
#debug = 0  # or 1 for line tables only
#strip = "debuginfo"

[profile.release]
debug = 0  # or 1 for line tables only
strip = true
opt-level = "z"
lto = true
codegen-units=1
panic = "abort"

[dependencies]
pathdiff = "0.2.3"
pico-args = { version = "0.5.0", features = ["eq-separator", "short-space-opt"] }

[[bin]]
name = "tmplr"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.1.1"
assert_fs = "1.1.3"
predicates = "3.1.3"
